fixed mobile show alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,11 @@
   }
 }
 
+a {
+color:black;
+text-decoration: none;
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
